# classifyhandshape

./: CMakeLists.txt  README.md  demo.cpp  testResult.cpp  train.cpp
